# bossify-with-claude

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SKILL.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
hooks/: _shim.py  post_tool_use.py  pre_tool_use.py  session_end.py  session_start.py  stop.py  user_prompt_submit.py
launch-assets/: NEW_README_HERO.md  README.md  content-calendar.md  demo-storyboard.md  hn-reddit-timing.md  launch-checklist.md  readme-hero-rewrite.md  show-hn.md  twitter-thread.md
references/: architecture.md  examples.md  hooks.md  roi-model.md  schemas.md
src/token_roi/: __init__.py  attribution.py  cli.py  compression.py  db.py  employees.py  events.py  hooks.py  i18n.py  llm_judge.py  memory.py  pricing.py  replay.py  retrieval.py  roi.py  sdk_wrapper.py  storage.py  telemetry.py
src/token_roi/dashboard/: __init__.py  server.py
src/token_roi/dashboard/static/: app.css  app.js  app.manager.js
src/token_roi/dashboard/templates/: index.html
src/token_roi/importers/: __init__.py  aider.py  claude_code.py  codex.py  cursor.py  cursor_usage.py  openai_jsonl.py
tests/: conftest.py  test_aggregate_and_naming.py  test_attribution_roi.py  test_cli.py  test_db_cost.py  test_events.py  test_hooks.py  test_importer_streaming_dedup.py  test_importers_multi.py  test_memory_compression.py  test_nuclear.py  test_pricing.py  test_propagation.py  test_retrieval.py  test_storage.py  test_synthetic_prompts.py
